<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.celdev.thirtyjava.gameactivity.GameActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/round_text"
        android:gravity="end"
        android:textSize="18sp"
        android:layout_marginEnd="12dp"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/throw_number"
        app:layout_constraintTop_toBottomOf="@id/round_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/throw_text"
        android:gravity="end"
        android:textSize="18sp"
        android:layout_marginEnd="12dp"
        />

    <RelativeLayout
        android:id="@+id/dice_layout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/throw_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        tools:layout_editor_absoluteX="8dp">

        <com.celdev.thirtyjava.view.DiceCheckbox
            android:layout_centerInParent="true"
            android:id="@+id/dice_1"
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/dice_margin"
            android:layout_marginBottom="@dimen/dice_margin"
            />
        <com.celdev.thirtyjava.view.DiceCheckbox
            android:id="@+id/dice_2"
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:layout_toEndOf="@id/dice_1"
            android:layout_marginBottom="@dimen/dice_margin"
            />
        <com.celdev.thirtyjava.view.DiceCheckbox
            android:id="@+id/dice_3"
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:layout_below="@+id/dice_1"
            android:layout_marginEnd="@dimen/dice_margin"
            android:layout_marginBottom="@dimen/dice_margin"
            />
        <com.celdev.thirtyjava.view.DiceCheckbox
            android:id="@+id/dice_4"
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:layout_toEndOf="@id/dice_3"
            android:layout_below="@id/dice_2"
            android:layout_marginBottom="@dimen/dice_margin"
            />
        <com.celdev.thirtyjava.view.DiceCheckbox
            android:id="@+id/dice_5"
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:layout_below="@id/dice_3"
            android:layout_marginEnd="@dimen/dice_margin"
            android:layout_marginBottom="@dimen/dice_margin"
            />
        <com.celdev.thirtyjava.view.DiceCheckbox
            android:id="@+id/dice_6"
            android:layout_width="@dimen/dice_size"
            android:layout_height="@dimen/dice_size"
            android:layout_toEndOf="@id/dice_5"
            android:layout_below="@id/dice_4"
            />


    </RelativeLayout>
    <Button
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/roll_dice"
        android:id="@+id/rollBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"
        tools:layout_editor_absoluteX="8dp" />
    <Button
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/start_round"
        android:id="@+id/continueRound"
        android:enabled="true"
        app:layout_constraintBottom_toTopOf="@id/rollBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="8dp" />




</android.support.constraint.ConstraintLayout>
